# piratao

./: .gitignore
rossoflix-api/: Cargo.toml  Dockerfile  README.md  package-lock.json
rossoflix-api/src/: main.rs
rossoflix-app/: package-lock.json  package.json
rossoflix-app/app/: globals.css  layout.tsx  page.tsx
rossoflix-app/app/movie/[imdb_id]/: page.tsx
rossoflix-app/app/stream/: page.tsx
rossoflix-app/components/: MovieList.tsx  SearchBox.tsx  VideoPlayer.tsx
